Fix overflow / width issue with long lines

--- a/src/assets/css/field/_markdown-field.scss
+++ b/src/assets/css/field/_markdown-field.scss
@@ -1,3 +1,10 @@
+// make sure there's no overflow
+.k-markdown-field {
+	.k-input-element {
+		width: 100%;
+	}
+}
+
 // disabled option
 .k-input[data-theme=field][data-disabled] .CodeMirror {
   background: #efefef;
